--- a/index.html
+++ b/index.html
@@ -40,23 +40,30 @@
               <p>
                 Digital Innovation<br>
                 <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </p>
+              <p>
                 Visual Communication<br>
                 <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </p>
+              <p>
                 Information Systems<br>
                 <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>  
+                </div>
+              </p>
+              <p>
                 Copy Writing<br>
                 <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </p>
             </div>
           </div>
-
+        </div>
           <!--Closing my column col-md-4-->
          
         <div class="col-md-8">
@@ -72,16 +79,16 @@
           <div class="card-block">
             <h4 class="card-title">Interests</h4>
             <p class="card-text">
-              <strong>Listening to Bossa Nova music</p>
+              <strong>Listening to Bossa Nova music</strong>
                 <small>While looking at shipping container homes on Pinterest.</small>
                 <br>
                 I have recently become obssessed with looking up shipping container homes. On YouTube, Pinterest,..Google. I never knew I needed to live in one of these until I saw how other people are living. <br>
                 The goal now is to find a scenic spot, purchase a shipping container (or two) and enlist the services of creative geniuses and friends to visualise my dream home.
               </p>
-              <p class="card-text">
-                
-
-
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
