--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <strong>Listening to Bossa Nova music</strong>
                 <small>while looking at shipping container homes on Pinterest.</small>
                 <br>
-                I have recently become obssessed with looking up shipping container homes. On YouTube, Pinterest,..Google. I never knew I needed to live in one of these until I saw how other people are living. <br>
+                I have recently become obssessed with looking up shipping container homes. On YouTube, Pinterest...Google. I never knew I needed to live in one of these until I saw how other people are living. <br>
                 The goal now is to find a scenic spot, purchase a shipping container (or two) and enlist the services of creative geniuses and friends to visualise my dream home.
               </p>
           </div>
