--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar navbar-dark bg-primary">
       <div class="container">
-        <a class="navbar-brand">It's Fisha</a>
+        <a class="navbar-brand">Home</a>
         <ul class="nav navbar-nav pull-right">
           <li class="nav-item active">
             <a class="nav-link" href="#">Profile</a>
