--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <p class="card-text">
                 East Africa<br>
 
-                LSE<br>
+                LSE Graduate<br>
 
                 Naps are so therapeutic
               </p>
