--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="card text-center">
               <h4 class="bio">Information</h4>
               <p class="card-text">
-                East Africa<br>
+                East African<br>
 
                 LSE Graduate<br>
 
