--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
               <a>
                 <i class="fa fa-twitter"></i>
               </a>
+              <a>
+                <i class="fa fa-instagram"></i>
+              </a>
             </div>
           </div>
 
